objects/CC_Tax__c.object
<CustomObject>
    <fields>
        <fullName>CC_Cart_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Cart Item</label>
        <referenceTo>ccrz__E_CartItem__c</referenceTo>
        <relationshipLabel>CC_Tax</relationshipLabel>
        <relationshipName>CC_Tax</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>CC_Tax</relationshipLabel>
        <relationshipName>CC_Tax</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CalculatedTax__c</fullName>
        <label>CalculatedTax</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectiveRate__c</fullName>
        <label>EffectiveRate</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpositionId__c</fullName>
        <label>ImpositionId</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpositionTypeId__c</fullName>
        <label>ImpositionTypeId</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpositionTypevalue__c</fullName>
        <label>ImpositionTypevalue</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpositionValue__c</fullName>
        <label>ImpositionValue</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Invoice Item</label>
        <referenceTo>ccrz__E_InvoiceItem__c</referenceTo>
        <relationshipLabel>CC_Tax</relationshipLabel>
        <relationshipName>CC_Tax</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsService</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JurisdictionId__c</fullName>
        <label>JurisdictionId</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JurisdictionLevel__c</fullName>
        <label>JurisdictionLevel</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JurisdictionValue__c</fullName>
        <label>JurisdictionValue</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonTaxable__c</fullName>
        <label>NonTaxable</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonCode__c</fullName>
        <label>ReasonCode</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs__c</fullName>
        <label>Situs</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxCollectedFromParty__c</fullName>
        <label>TaxCollectedFromParty</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxResult__c</fullName>
        <label>TaxResult</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRuleId__c</fullName>
        <label>TaxRuleId</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxStructure__c</fullName>
        <label>TaxStructure</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxType__c</fullName>
        <label>TaxType</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <label>Taxable</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Is_Shipping_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu Is Shipping Tax</label>
        <type>Checkbox</type>
    </fields>
    <label>CC_Tax</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CalculatedTax__c</columns>
        <columns>Taxable__c</columns>
        <columns>NonTaxable__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CC_Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC_Tax</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>